--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -1,30 +1,65 @@
 <html>
-	<head>
-		<title>Student Resident UofT</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
-		<script src="javascripts/ResApp.js"></script>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="stylesheets/style.css">
-	</head>
-	<body ng-app="ResApp">
-		<div id='main' class="container">
-			<nav class="navbar-fluid navbar-default navbar-fixed-top">
-				<div class="container">
-						<a class="navbar-brand" href="/">
+    <head>
+        <title>Student Resident UofT</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
+        <script src="javascripts/ResApp.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
+    </head>
+    <body ng-app="ResApp">
+        <header>
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="/">
                             <span class="glyphicon glyphicon-education" aria-hidden="true"></span> ResApp
                         </a>
-					    <p class="navbar-text"> Find Your Roommate!</p>
-					    <p class="navbar-right navbar-text" ng-hide="authenticated">To Use the Service, &#09;<a href="#/login">Login</a> or <a href="#/register">Register</a></p>
-					    <p class="navbar-right navbar-text" ng-show="authenticated"><a href="#" ng-click="signout()">Logout</a></p>
-					    <p class="navbar-right navbar-text" ng-show="authenticated">Signed in as {{current_user}}</p>		
-				</div>
-			</nav>
-			<div class="col-md-offset-2 col-md-8">
-				<div ng-view>
-				</div>
-			</div>
-		</div>
-	</body>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
+                        <ul class="nav navbar-nav navbar-right">
+                            <li ng-hide="authenticated">
+                                <p class="navbar-btn">
+                                    <a href="/#/login" class="btn btn-default">Login</a>
+                                </p>
+                            </li>
+                            <li ng-hide="authenticated">
+                                <p class="navbar-btn">
+                                    <a href="/#/register" class="btn btn-primary">Register</a>
+                                </p>
+                            </li>
+                            <li class="dropdown" ng-show="authenticated">
+                                <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="profile">My profile</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#" ng-click="signout()">Logout</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="container">
+            <div class="main-content">
+                <div ng-view>
+                </div>
+            </div>
+        </div>
+        </div>
+    </body>
+    <script src="javascripts/jquery-2.2.1.min.js"></script>
+    <script src="javascripts/bootstrap.min.js"></script>
 </html>
