--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -34,7 +34,7 @@
                             </li>
                             <li ng-hide="authenticated">
                                 <p class="navbar-btn">
-                                    <a href="/#/register" class="btn btn-primary">Register</a>
+                                    <a href="/#/register" class="btn btn-success">Register</a>
                                 </p>
                             </li>
                             <li class="dropdown" ng-show="authenticated">
