--- a/resApp/public/stylesheets/style.css
+++ b/resApp/public/stylesheets/style.css
@@ -87,9 +87,9 @@ html, body {
     }
     
     .img-default {
-        height: 70px;
-        width: 70px;
-        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 16px;
     }
 
 }
