--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -61,7 +61,11 @@
                 </div>
             </div>
         </div>
-        </div>
+        <footer class="footer">
+            <div class="container">
+                <h4 class="text-center"><small>ResApp 2016</small></h4>
+            </div>
+        </footer>
     </body>
     <script src="javascripts/jquery-2.2.1.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
