--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -45,7 +45,7 @@
                                     <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="profile">My profile</a></li>
+                                    <li><a href="/#/profile">My profile</a></li>
                                     <li role="separator" class="divider"></li>
                                     <li><a href="#" ng-click="signout()">Logout</a></li>
                                 </ul>
