--- a/resApp/public/stylesheets/style.css
+++ b/resApp/public/stylesheets/style.css
@@ -45,6 +45,34 @@ html, body {
     padding: 16px 0;
 }
 
+
+/****************************************************
+* Navbar
+****************************************************/
+
+.navbar {
+    background: #337ab7;
+    border: none;
+    box-shadow: 0 2px 8px #888888;
+}
+
+.navbar-inverse .navbar-collapse,
+.navbar-inverse .navbar-form {
+    border: none;
+}
+
+.navbar-toggle {
+    border: none;
+}
+
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
 .navbar-right {
     padding-right: 15px;
 }
@@ -52,6 +80,10 @@ html, body {
 .navbar-right > li {
     margin: 0 6px;
 }
+
+/****************************************************
+* Contents
+****************************************************/
 
 .page-header {
     margin: 10px 0 20px;
