--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -13,7 +13,7 @@
     </head>
     <body ng-app="ResApp">
         <header>
-            <nav class="navbar navbar-default navbar-fixed-top">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
@@ -30,19 +30,19 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                         <ul class="nav navbar-nav navbar-right">
-                            <li ng-hide="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
                                     <a href="/#/login" class="btn btn-default">Login</a>
                                 </p>
                             </li>
-                            <li ng-hide="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
-                                    <a href="/#/register" class="btn btn-success">Register</a>
+                                    <a href="/#/register" class="btn btn-default btn-success">Register</a>
                                 </p>
                             </li>
-                            <li class="dropdown" ng-show="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" class="dropdown" ng-show="authenticated">
                                 <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span class="caret"></span>
+                                    <span class="glyphicon glyphicon-user" style="color: white" aria-hidden="true"></span> <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="profile">My profile</a></li>
