--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -24,30 +24,30 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="/">
-                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span> ResApp
+                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span> UofT ResApp
                         </a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                         <ul class="nav navbar-nav navbar-right">
-                            <li class="trig-collapse" ng-hide="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
                                     <a href="/#/login" class="btn btn-default">Login</a>
                                 </p>
                             </li>
-                            <li class="trig-collapse" ng-hide="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
                                     <a href="/#/register" class="btn btn-default btn-success">Register</a>
                                 </p>
                             </li>
-                            <li ng-show="authenticated">
+                            <li data-toggle="collapse" data-target=".navbar-collapse" class="dropdown" ng-show="authenticated">
                                 <a href class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                     <span class="glyphicon glyphicon-user" style="color: white" aria-hidden="true"></span> <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li class="trig-collapse" ><a href="/#/profile">My profile</a></li>
+                                    <li><a href="/#/profile">My profile</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li class="trig-collapse" ><a href="#" ng-click="signout()">Logout</a></li>
+                                    <li><a href="#" ng-click="signout()">Logout</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -69,12 +69,4 @@
     </body>
     <script src="javascripts/jquery-2.2.1.min.js"></script>
     <script src="javascripts/bootstrap.min.js"></script>
-    <script>
-        /* navbar collapse for mobile devices */
-        $(document).ready(function () {
-            $(".navbar-nav li.trig-collapse").click(function(event) {
-                $(".navbar-collapse").collapse('hide');
-            });
-        });
-    </script>
 </html>
