--- a/resApp/public/stylesheets/style.css
+++ b/resApp/public/stylesheets/style.css
@@ -26,6 +26,7 @@ html, body {
     margin: 0;
     padding: 0;
     background: #f8f8f8;
+    font-family: 'Lato', sans-serif;
 }
 
 .v-center {
@@ -81,6 +82,10 @@ html, body {
     margin: 0 6px;
 }
 
+.btn {
+    text-transform: uppercase;
+}
+
 /****************************************************
 * Contents
 ****************************************************/
@@ -89,11 +94,17 @@ html, body {
     margin: 10px 0 20px;
 }
 
-.img-default {
-    display: table-cell;
-    height:  175px;
-    width: 175px;
+.page-header h3 {
+    font-weight: bold;
 }
+
+.post-title {
+    text-transform: uppercase;
+}
+
+/****************************************************
+* Media
+****************************************************/
 
 @media (max-width: 767px) {
 
@@ -103,6 +114,14 @@ html, body {
 
     .navbar-right li p a {
         width: 100%;
+    }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
+        display: none;
+    }
+    
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+        color: white;
     }
 
     .img-default {
