--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -9,6 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
         <script src="javascripts/ResApp.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,700'  type='text/css'>
         <link rel="stylesheet" href="stylesheets/style.css">
     </head>
     <body ng-app="ResApp">
