--- a/resApp/views/index.ejs
+++ b/resApp/views/index.ejs
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html; charset=UTF-8" http-equiv="content-type">
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-        <title>Student Resident UofT</title>
+        <title>UofT ResApp</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-resource.js"></script>
@@ -24,7 +24,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand trig-collapse" href="/">
-                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span> ResApp
+                            <span class="glyphicon glyphicon-education" aria-hidden="true"></span> UofT ResApp
                         </a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,12 +32,12 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="trig-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
-                                    <a href="/#/login" class="btn btn-default">Login</a>
+                                    <a href="/#/login" class="btn btn-default">Log In</a>
                                 </p>
                             </li>
                             <li class="trig-collapse" ng-hide="authenticated">
                                 <p class="navbar-btn">
-                                    <a href="/#/register" class="btn btn-default btn-success">Register</a>
+                                    <a href="/#/signup" class="btn btn-default btn-success">Sign Up</a>
                                 </p>
                             </li>
                             <li ng-show="authenticated">
