--- a/resApp/public/stylesheets/style.css
+++ b/resApp/public/stylesheets/style.css
@@ -11,6 +11,11 @@
     background-color: #ffffff;
 }
 
+.one {
+    background-color: #f9fff2;
+
+}
+
 .form-auth {
     max-width: 330px;
     padding: 5px;
